--- a/src/pages/Booking/booking.css
+++ b/src/pages/Booking/booking.css
@@ -25,6 +25,9 @@
 
 @media screen and (max-width: 768px) {
   .booking-container {
-    width: 90%;
+    width: 100%;
+  }
+  .arrow-back {
+    display: none;
   }
 }
